<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/btnAdd"
        android:onClick="addOnClick"/>
    <Button
        android:id="@+id/btnMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnAdd"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/btnMod"
        android:onClick="modOnClick"/>
    <Button
        android:id="@+id/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnMod"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnDel"
        android:onClick="delOnClick"/>
    <Button
        android:id="@+id/btnSel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnDel"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btnSel"
        android:onClick="selOnClick"/>
    <TextView
        android:id="@+id/t1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAdd"
        android:layout_marginStart="20dp"
        android:text="@string/_id"/>
    <TextView
        android:id="@+id/t2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAdd"
        android:layout_toEndOf="@id/t1"
        android:text="@string/name"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAdd"
        android:layout_toEndOf="@id/t2"
        android:text="@string/price"/>
    <ListView
        android:id="@+id/listCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:layout_marginTop="10dp">
    </ListView>

</RelativeLayout>
