<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/cid"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:text="@string/_id"/>
    <TextView
        android:id="@+id/cname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/cprice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/price"/>
</LinearLayout>